2005-10-17  Ross Burton  <ross@burtonini.com>

	* src/actions.c:
	* src/actions.h:
	* src/parser.c:
	Add Close action (Ryan Koppenhaver)

2005-10-17  Ross Burton  <ross@burtonini.com>

	* src/sexp-test.c:
	* tests/not-false.ds:
	* tests/not-true.ds:
	Fix the test suite (Ryan Koppenhaver)

2005-10-17  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.14.

2005-10-17  Ross Burton  <ross@burtonini.com>

	* src/actions.c:
	Add geometry setting action, thanks to Guido Boehm.

2005-10-16  Ross Burton  <ross@burtonini.com>

	* src/actions.c:
	Fix typo breaking the set wintype action, thanks to Stefan van der
	Haven for spotting this.

2005-10-14  Ross Burton  <ross@burtonini.com>

	* README:
	Fix typos noticed by Larry Virden.

2005-10-07  Ross Burton  <ross@burtonini.com>

	* src/actions.c:
	When pinning windows call pin() instead of stick() (thanks to
	Jean-Yves Lefort for noticing this bug).

2005-09-28  Ross Burton  <ross@burtonini.com>

	* src/parser.c:
	* src/devilspie.c:
	Append new expressions, not prepend.  This way there is some
	pretence of user configuration overriding the system.

2005-09-27  Ross Burton  <ross@burtonini.com>

	* NEWS:
	Version 0.13.

2005-09-27  Ross Burton  <ross@burtonini.com>

	* devilspie.spec.in:
	Update for 0.13, from Lars Damerow <lars@pixar.com>.

2005-09-27  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* tests/Makefile.am:
	* tests/*.ds:
	Add test files.

	* src/Makefile.am:
	* src/sexp-test.c:
	Add test framework.

2005-09-27  Ross Burton  <ross@burtonini.com>

	* src/parser.h:
	* src/parser.c:
	* src/devilspie.c:
	Make load_configuration_file() return an ESExp, instead of adding
	it to the list itself.
	
2005-09-27  Ross Burton  <ross@burtonini.com>

	* */*:
	Utter, complete, and total rewrite from scratch. XML is dead, long
	live s-expressions with logical operations! This rewrite was
	sponsored by Lars Damerow <lars@pixar.com>.

2005-09-26  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am: