@@ -3,6 +3,13 @@
 	* src/actions.c:
 	* src/actions.h:
 	* src/parser.c:
+	Add Print action (Ryan Koppenhaver)
+
+2005-10-17  Ross Burton  <ross@burtonini.com>
+
+	* src/actions.c:
+	* src/actions.h:
+	* src/parser.c:
 	Add Close action (Ryan Koppenhaver)
 
 2005-10-17  Ross Burton  <ross@burtonini.com>
